# llforth

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  compiler.cpp  core.h  dict.cpp  dict.h  dtc.cpp  engine.h  frontend.cpp  interpreter.cpp  interpreter.forth  interpreter.fs  itc.cpp  lib.c  lib.cpp  lib.h  main.cpp  stack.h  test.forth  util.cpp  util.h  words.h
lib/: Cargo.toml
lib/examples/read_word/: main.rs
lib/src/: lib.rs  prompt.rs  reader.rs
lib/tests/: read_word.rs
sandbox/: compiler.cpp  dict.ll  dtc.ll  itc.ll  stack.ll
test/: lib_test.cpp  lit.cfg.py
test/compiler/: 0branch.fs  arithmetic.forth  arithmetic.fs  branch.forth  branch.fs  branch0.forth  branch0.fs  double_quote.fs  drop.forth  drop.fs  dup.forth  dup.fs  find.forth  find.fs  inbuf.forth  lit.cfg.py  number.forth  number.fs  print_stack.forth  print_stack.fs  sanity.forth  sanity.fs  sanity.ll  word.forth  word.fs  write-fetch.forth  write-fetch.fs
test/interpreter/: lit.cfg.py  sanity.forth  sanity.fs
