[package]
name = "lib"
version = "0.1.0"
authors = ["Ryosuke IWANAGA <me@riywo.com>"]

[lib]
name = "lib"
crate-type = ["lib", "staticlib"]

[dependencies]
#rustyline = { git = "https://github.com/riywo/rustyline", branch = "feature-disable-newline" }
rustyline = "3.0"
libc = "0.2"
atty = "0.2"

[dev-dependencies]
assert_cmd = "0.10"
